force-app/main/default/objects/GB_Timeline_Activity__c/GB_Timeline_Activity__c.object-meta.xml
<CustomObject>
    <label>Timeline Activity</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Timeline Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>