force-app/main/default/objects/GB_Timeline_Activity__c/fields/createdDate__c.field-meta.xml
<CustomField>
    <fullName>createdDate__c</fullName>
    <description>Created Date</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>