force-app/main/default/objects/GB_Timeline_Activity__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <description>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</description>
    <inlineHelpText>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>