force-app/main/default/objects/GB_Timeline_Activity__c/fields/related_to__c.field-meta.xml
<CustomField>
    <fullName>related_to__c</fullName>
    <inlineHelpText>Id of the object to which this activity is related</inlineHelpText>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>