force-app/main/default/objects/GB_Timeline_Activity__c/fields/stream_hide__c.field-meta.xml
<CustomField>
    <fullName>stream_hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stream Hide</label>
    <type>Checkbox</type>
</CustomField>