force-app/main/default/objects/GB_Timeline_Activity__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <inlineHelpText>Title of activity, displays under title</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>